tests/snapshots/execution_spec__test-graphqlsource.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Post {
  id: Int!
  user: User
  userId: Int!
}

type Query {
  post(id: Int!): Post
}

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
