tests/snapshots/execution_spec__test-grpc-duplicated-reference.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Multiple proto files with same signature are not allowed",
    "trace": [
      "Query",
      "news",
      "@grpc"
    ],
    "description": null
  },
  {
    "message": "Multiple proto files with same signature are not allowed",
    "trace": [
      "Query",
      "newsById",
      "@grpc"
    ],
    "description": null
  },
  {
    "message": "Multiple proto files with same signature are not allowed",
    "trace": [
      "Query",
      "newsByIdBatch",
      "@grpc"
    ],
    "description": null
  }
]
