tests/snapshots/execution_spec__test-grpc-group-by.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "field id not found",
    "trace": [
      "News"
    ],
    "description": null
  }
]
