tests/snapshots/execution_spec__test-grpc-invalid-proto-id.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "File descriptor not found for method: abc.NewsService.GetAllNews",
    "trace": [
      "Query",
      "news",
      "@grpc"
    ],
    "description": null
  },
  {
    "message": "File descriptor is not initialised",
    "trace": [
      "Query",
      "news",
      "@grpc"
    ],
    "description": null
  }
]
