tests/snapshots/execution_spec__test-grpc-missing-fields.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "missing key: id",
    "trace": [
      "News"
    ],
    "description": null
  }
]
