tests/snapshots/execution_spec__test-grpc-nested-data.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "expected Non repeatable type",
    "trace": [
      "News"
    ],
    "description": null
  }
]
