tests/snapshots/execution_spec__test-grpc-nested-optional.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "expected type to be required",
    "trace": [
      "news"
    ],
    "description": null
  }
]
