tests/snapshots/execution_spec__test-grpc-proto-path.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "No such file or directory (os error 2)",
    "trace": [],
    "description": null
  }
]
